@@ -43,6 +43,7 @@ libIntaRNA_a_HEADERS =    \
 					OutputHandlerCsv.h \
 					OutputHandlerHub.h \
 					OutputHandlerIntaRNA1.h \
+					OutputHandlerInteractionList.h \
 					OutputHandlerRangeOnly.h \
 					OutputHandlerText.h \
 					PredictionTracker.h \
@@ -89,6 +90,7 @@ libIntaRNA_a_SOURCES =    \
 					OutputHandler.cpp \
 					OutputHandlerCsv.cpp \
 					OutputHandlerIntaRNA1.cpp \
+					OutputHandlerInteractionList.cpp \
 					OutputHandlerRangeOnly.cpp \
 					OutputHandlerText.cpp \
 					PredictionTrackerPairMinE.cpp \
